@@ -5,18 +5,14 @@ import com.pm.patientservice.mapper.PatientMapper;
 import com.pm.patientservice.model.Patient;
 import com.pm.patientservice.repository.PatientRepository;
 import com.pm.patientservice.service.PatientService;
-import jakarta.inject.Inject;
-import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.*;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.MockedStatic;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
@@ -32,11 +28,22 @@ public class ServiceUnitTests {
 
     @Mock
     private PatientRepository repository;
+    private MockedStatic<PatientMapper> mapper;
 
-     Patient patient1;
-     Patient patient2;
-     PatientResponseDTO dto1;
-     PatientResponseDTO dto2;
+    Patient patient1;
+    Patient patient2;
+    PatientResponseDTO dto1;
+    PatientResponseDTO dto2;
+
+    @BeforeEach
+    void before() {
+        mapper = mockStatic(PatientMapper.class);
+    }
+
+    @AfterEach
+    void after() {
+        mapper.close();
+    }
 
     @BeforeEach
     void setUp() {
@@ -49,17 +56,19 @@ public class ServiceUnitTests {
 
         System.out.println("Patient1 ID: " + patient1.getId()); // This will show null
 
-        dto1 = PatientMapper.toDTO(patient1);
-        dto2 = PatientMapper.toDTO(patient2);
+        dto1 = new PatientResponseDTO(patient1.getId().toString(), patient1.getName(), patient1.getAddress(),
+                patient1.getEmail(), patient1.getDateOfBirth().toString());
+        dto2 = new PatientResponseDTO(patient2.getId().toString(), patient2.getName(), patient2.getAddress(),
+                patient2.getEmail(), patient2.getDateOfBirth().toString());
     }
 
     @Test
-    @DisplayName("Testing getting all patientDTOs")
+    @DisplayName("getAllPatients returns mapped patient DTOs")
     void shouldReturnAllPatientDTOs() {
         //1. Arrange
-        List<Patient> mockPatients = Arrays.asList(patient1, patient2);
-        List<PatientResponseDTO> expectedDTOs = Arrays.asList(dto1, dto2);
-        when(repository.findAll()).thenReturn(mockPatients);
+        when(repository.findAll()).thenReturn(List.of(patient1, patient2));
+        mapper.when(() -> PatientMapper.toDTO(patient1)).thenReturn(dto1);
+        mapper.when(() -> PatientMapper.toDTO(patient2)).thenReturn(dto2);
 
         // 2. Act
         List<PatientResponseDTO> result = patientService.getAllPatients();
@@ -68,7 +77,14 @@ public class ServiceUnitTests {
         assertNotNull(result);
         assertEquals(2, result.size());
 
-        // Verify repository interaction
+        // More meaningful assertions:
+        assertEquals(dto1, result.get(0));
+        assertEquals(dto2, result.get(1));
+
         verify(repository, times(1)).findAll();
+
+        // verify mapping was invoked for each patient
+        mapper.verify(() -> PatientMapper.toDTO(patient1));
+        mapper.verify(() -> PatientMapper.toDTO(patient2));
     }
 }
